# tplink-nvr-export

./: .gitignore  README.md  nvr-export.spec  nvr_export_cli.py  nvr_export_gui.py  pyproject.toml
.github/workflows/: release.yml
src/tplink_nvr_export/: __init__.py  auth.py  cli.py  debug.py  gui.py  models.py  nvr_client.py  web_client.py
